5.5.0
NEW
    - Skinning support for Postal in the mail frame UI (Thanks, Hatdragon)
    - Option to disable map coordinates in both minimap and world map (Thanks, Hatdragon)
    - "Copy Profile" function added
    - Organized, optimized, and cleaned up textures to reduce download size
    - Make Micro Bar movable
    - Update "Importend Raid debuffs" with Shadowland ones / remove BfA debuffs
    - Added option to show ID's in tooltips with a modifier