@@ -8,7 +8,7 @@
 ## X-Curse-Project-ID: 94310
 ## DefaultState: Enabled
 
-## Author: deadend06
+## Author: deadend06, Nils89, nezroy
 
 ## SavedVariablesPerCharacter: GW2UI_SETTINGS_DB_03
 ## SavedVariables: GW2UI_STORAGE, GW2UI_SETTINGS_PROFILES
